<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_regular"
    android:orientation="vertical"
    tools:context="com.example.android.habittracker.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            style="@style/EditorTitles"
            android:text="@string/editor_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editor_name"
                android:layout_width="match_parent"
                android:hint="@string/editor_hint_name"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editor_description"
                android:layout_width="match_parent"
                android:textSize="@dimen/text_small"
                android:hint="@string/editor_hint_description"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/EditorTitles"
        android:text="@string/editor_calendar"
        android:layout_marginBottom="@dimen/margin_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/EditorCheckboxLayout">

            <CheckBox
                android:id="@+id/editor_monday"
                style="@style/EditorCheckbox" />

            <TextView
                style="@style/EditorCheckboxText"
                android:text="@string/day_monday" />
        </LinearLayout>

        <LinearLayout style="@style/EditorCheckboxLayout">

            <CheckBox
                android:id="@+id/editor_tuesday"
                style="@style/EditorCheckbox" />

            <TextView
                style="@style/EditorCheckboxText"
                android:text="@string/day_tuesday" />
        </LinearLayout>

        <LinearLayout style="@style/EditorCheckboxLayout">

            <CheckBox
                android:id="@+id/editor_wednesday"
                style="@style/EditorCheckbox" />

            <TextView
                style="@style/EditorCheckboxText"
                android:text="@string/day_wednesday" />
        </LinearLayout>

        <LinearLayout style="@style/EditorCheckboxLayout">

            <CheckBox
                android:id="@+id/editor_thursday"
                style="@style/EditorCheckbox" />

            <TextView
                style="@style/EditorCheckboxText"
                android:text="@string/day_thursday" />
        </LinearLayout>

        <LinearLayout style="@style/EditorCheckboxLayout">

            <CheckBox
                android:id="@+id/editor_friday"
                style="@style/EditorCheckbox" />

            <TextView
                style="@style/EditorCheckboxText"
                android:text="@string/day_friday" />
        </LinearLayout>

        <LinearLayout style="@style/EditorCheckboxLayout">

            <CheckBox
                android:id="@+id/editor_saturday"
                style="@style/EditorCheckbox" />

            <TextView
                style="@style/EditorCheckboxText"
                android:text="@string/day_saturday" />
        </LinearLayout>

        <LinearLayout style="@style/EditorCheckboxLayout">

            <CheckBox
                android:id="@+id/editor_sunday"
                style="@style/EditorCheckbox" />

            <TextView
                style="@style/EditorCheckboxText"
                android:text="@string/day_sunday" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="60dp">

    <TextView
        style="@style/EditorTitles"
        android:text="@string/editor_reminder" />

    <Spinner
        android:id="@+id/editor_reminder"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Spinner>

    </LinearLayout>


</LinearLayout>
